--- a/index.css
+++ b/index.css
@@ -32,9 +32,11 @@ h1{
     border-radius: 2pc;
 }
 .inputNameText{
-    width: 100px;
-    height: 50px;
+    width: 300px;
+    height: 40px;
     text-align: center;
+    border: none;
+    border-radius: 2pc;
 }
 .js-weather{
     font-size: 15pt;
